Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97382

qt.conf not reladed properly after QCoreApplication::instance()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.2, 6.3.0 Alpha
    • 6.2.0
    • WebEngine
    • None
    • Windows
    • e6db4206b81f3fcea13646461f56a5207d9608c2 (qt/qtbase/dev) 4a31673d0714f1b76b12dc502365daee4bfe3171 (qt/qtbase/6.2)

      if QLibraryInfo:path function is used BEFORE QCoreApplication::instance() is initialized,

      when you call QLibraryInfo:path AFTER QCoreApplication::instance() is inittialized,

      QLibrarySettings is not reloaded.

      So, qt.conf pathes are not taken into account

       

      reloadOnQAppAvailable variable is true, but havePaths function never test it.

       

      This was working with Qt5

        1. callstack.png
          49 kB
          Alban Pellet
        2. image-2021-10-11-14-26-00-398.png
          17 kB
          Alban Pellet
        3. image-2021-10-11-14-33-57-195.png
          36 kB
          Alban Pellet
        4. image-2021-10-11-14-34-22-693.png
          4 kB
          Alban Pellet
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            alban_go2 Alban Pellet
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes